<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:background="@drawable/calorie_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/beam_text_vm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:text="@string/vm_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/bar_calorie"
            android:gravity="center" >
        </ImageView>

        <TextView
            android:id="@+id/beam_text_vm_which_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:text="@string/vm_which_coffee"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beam_text_vm_taste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:text="@string/vm_taste"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beam_text_vm_price_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:background="@drawable/bar_calorie" >
        </ImageView>

        <LinearLayout
            android:layout_width="250dip"
            android:layout_height="match_parent"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50dip"
                android:layout_height="72dip"
                android:layout_gravity="center"
                android:layout_marginTop="0dip"
                android:background="@drawable/nfc_tag" />

            <TextView
                android:id="@+id/beam_text"
                android:layout_width="170dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="0dip"
                android:gravity="left"
                android:text="@string/info"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/beam_text2"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:text="@string/worry"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="250dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@android:drawable/btn_default"
                android:text="Cancel"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>